[project]
name = "rl_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.136.1",
    "generate_vsim",
    "optimal_morphology_rl",
    "python-multipart>=0.0.28",
    "uvicorn>=0.47.0",
]

[tool.uv.sources]
generate_vsim = { workspace = true }
optimal_morphology_rl = { workspace = true }
